fixes pictures alignment

--- a/style.css
+++ b/style.css
@@ -161,19 +161,23 @@
 }
 
 .picture{
-    padding:10px;
+    padding: 10px;
     width: 415px;
+    align-items: center;
 }
 
 .pictures-layout {
     column-count: 3;
     column-gap: 0;
-  }
-  .pictures-panel {
+}
+
+.pictures-panel{
     break-inside: avoid;
-    padding: 5px;
-  }
-  .pictures-content {
+    padding: 10px;
+
+}
+
+.pictures-content{
     padding: 10px;
     border-radius: 10px;
-  }
+}
